fix wrong size for h3

--- a/ui/components/forms/RichTextEditor/styles.css
+++ b/ui/components/forms/RichTextEditor/styles.css
@@ -54,7 +54,7 @@
   }
 
   & h3 {
-    font-size: 36px;
+    font-size: 26px;
     margin: 20px 0 10px;
   }
 
